Eclipspe project file (facilitates import).

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>alesia</groupId>
-	<artifactId>alesia_prototype</artifactId>
+	<groupId>sessl</groupId>
+	<artifactId>sessl</artifactId>
 	<packaging>jar</packaging>
-	<version>0.1-experimental</version>
-	<name>ALeSiA Prototype</name>
+	<version>0.5-SNAPSHOT</version>
+	<name>SESSL</name>
 	<url>http://</url>
 
 	<properties>
