--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sessl</artifactId>
 	<packaging>jar</packaging>
 	<version>0.5-SNAPSHOT</version>
-	<name>SESSL</name>
+	<name>Simulation Experiment Specification via a Scala Layer</name>
 	<url>http://</url>
 
 	<properties>
@@ -80,6 +80,7 @@
 			<plugin>
 				<groupId>org.scala-tools</groupId>
 				<artifactId>maven-scala-plugin</artifactId>
+				<version>2.14.1</version>
 				<configuration>
 					<jvmArgs>
 						<jvmArg>-Xms64m</jvmArg>
@@ -133,20 +134,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<!-- REPORTING -->
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.scala-tools</groupId>
-				<artifactId>maven-scala-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.4.2</version>
-			</plugin>
-		</plugins>
-	</reporting>
 
 </project>
