refs #5: pruning dependencies w.r.t. James II (actually there is a version conflict between jlibsbml-08.b2/rc1 used by different packages).

--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
 		</dependency>
 		<dependency>
 			<groupId>james2</groupId>
-			<artifactId>sr-testbench</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
+			<artifactId>sr</artifactId>
+			<version>0.8.6-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>james2</groupId>
