refs #5: solver can now be set.

--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 			<artifactId>sr</artifactId>
 			<version>0.8.6-SNAPSHOT</version>
 		</dependency>
-		<!-- To suppoort report generation: -->
+		<!-- To support report generation: -->
 		<dependency>
 			<groupId>james2</groupId>
 			<artifactId>resultreports</artifactId>
