Added stubs for all other bindings etc.

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,9 @@
 	<modules>
 		<module>sessl</module>
 		<module>sessl-james2</module>
+		<module>sessl-sbmlsim</module>
+		<module>sessl-omnetpp</module>
+		<module>sessl-integration</module>
 	</modules>
 	
 	<!-- Use local Maven repository -->
