--- a/sessl-integration/pom.xml
+++ b/sessl-integration/pom.xml
@@ -23,9 +23,14 @@
 			<artifactId>sessl-james2</artifactId>
 			<version>0.7-SNAPSHOT</version>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>org.sessl</groupId>
-			<artifactId>sessl-james2</artifactId>
+			<artifactId>sessl-sbmlsim</artifactId>
+			<version>0.7-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-omnetpp</artifactId>
 			<version>0.7-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
