Added test dependency, other helper classes should be moved to sessl.utils.test

--- a/sessl-james2/pom.xml
+++ b/sessl-james2/pom.xml
@@ -18,6 +18,10 @@
 			<groupId>org.sessl</groupId>
 			<artifactId>sessl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
 		<!-- To support performance observation and all/any-simulator execution 
 			modes: -->
 		<dependency>
