Added dependency to junit.

--- a/sessl-sbmlsim/pom.xml
+++ b/sessl-sbmlsim/pom.xml
@@ -18,5 +18,9 @@
 			<groupId>org.sessl</groupId>
 			<artifactId>sessl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
 	</dependencies>
 </project>
