--- a/pom.xml
+++ b/pom.xml
@@ -91,17 +91,17 @@
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-compiler</artifactId>
-			<version>2.9.1-1</version>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
-			<version>2.9.1-1</version>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scalap</artifactId>
-			<version>2.9.1-1</version>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
