--- a/sessl-integration/pom.xml
+++ b/sessl-integration/pom.xml
@@ -19,7 +19,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sessl</groupId>
-			<artifactId>sessl-james2</artifactId>
+			<artifactId>sessl-james</artifactId>
 			<version>0.7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -31,6 +31,10 @@
 			<groupId>org.sessl</groupId>
 			<artifactId>sessl-omnetpp</artifactId>
 			<version>0.7-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
 		</dependency>
 	</dependencies>
 </project>
