Configure test execution.

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,9 @@
 				<configuration>
 					<forkMode>once</forkMode>
 					<useFile>false</useFile>
+					<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
+					<workingDirectory>${project.build.testOutputDirectory}</workingDirectory>
+					<runOrder>random</runOrder>
 				</configuration>
 			</plugin>
 
