--- a/sessl-omnetpp/pom.xml
+++ b/sessl-omnetpp/pom.xml
@@ -5,17 +5,22 @@
 	<packaging>jar</packaging>
 	<name>SESSL Binding for OMNeT++</name>
 
- <parent>
-    <groupId>org.sessl</groupId>
-    <artifactId>parent-pom</artifactId>
-    <version>0.7-SNAPSHOT</version>
-    <relativePath>../.</relativePath>
- </parent>
- 
+	<parent>
+		<groupId>org.sessl</groupId>
+		<artifactId>parent-pom</artifactId>
+		<version>0.7-SNAPSHOT</version>
+		<relativePath>../.</relativePath>
+	</parent>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.sessl</groupId>
 			<artifactId>sessl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-james</artifactId>
+			<version>0.7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
