--- a/sessl-release/pom.xml
+++ b/sessl-release/pom.xml
@@ -12,10 +12,102 @@
  </parent>
 
   <dependencies>
+		<!-- SESSL core -->
 		<dependency>
 			<groupId>org.sessl</groupId>
 			<artifactId>sessl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl</artifactId>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl</artifactId>
+			<classifier>tests</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl</artifactId>
+			<classifier>test-sources</classifier>
+		</dependency>
+		
+		<!-- JAMES II binding -->
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-james</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-james</artifactId>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-james</artifactId>
+			<classifier>tests</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-james</artifactId>
+			<classifier>test-sources</classifier>
+		</dependency>
+		
+		<!-- SBMLsimulator binding -->
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-sbmlsim</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-sbmlsim</artifactId>
+			<classifier>tests</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-sbmlsim</artifactId>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-sbmlsim</artifactId>
+			<classifier>test-sources</classifier>
+		</dependency>
+		
+		<!-- OMNeT++ binding -->
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-omnetpp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-omnetpp</artifactId>
+			<classifier>tests</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-omnetpp</artifactId>
+			<classifier>tests</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-omnetpp</artifactId>
+			<classifier>test-sources</classifier>
+		</dependency>
+
+		<!-- Integration tests -->
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-integration</artifactId>
+			<classifier>tests</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-integration</artifactId>
+			<classifier>test-sources</classifier>
+		</dependency>
+		
   </dependencies>
 
   <build>
