Disable surefire failing if there are no tests.

--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,7 @@
 				<configuration>
 					<forkMode>once</forkMode>
 					<useFile>false</useFile>
+					<failIfNoTests>false</failIfNoTests>
 					<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
 					<workingDirectory>${project.build.testOutputDirectory}</workingDirectory>
 					<runOrder>random</runOrder>
