--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.9</version>
 				<configuration>
-					<forkMode>once</forkMode>
+					<forkMode>always</forkMode>
 					<useFile>false</useFile>
 					<failIfNoTests>false</failIfNoTests>
 					<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
