--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<scala.version>2.9.2</scala.version>
+		<sessl.source.repository>https://bitbucket.org/roland_ewald/sessl</sessl.source.repository>
 	</properties>
 
 	<repositories>
@@ -28,8 +29,8 @@
 
 	
 	<scm>
-		<connection>scm:hg:https://bitbucket.org/roland_ewald/sessl</connection>
-		<url>https://bitbucket.org/roland_ewald/sessl</url>
+		<connection>scm:hg:${sessl.source.repository}</connection>
+		<url>${sessl.source.repository}</url>
 	</scm>
 
 	<issueManagement>
