--- a/sessl-omnetpp/pom.xml
+++ b/sessl-omnetpp/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.sessl</groupId>
 		<artifactId>parent-pom</artifactId>
-		<version>0.7</version>
+		<version>0.8-SNAPSHOT</version>
 		<relativePath>../.</relativePath>
 	</parent>
 
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.sessl</groupId>
 			<artifactId>sessl-james</artifactId>
-			<version>0.7</version>
+			<version>0.8-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
