--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,7 @@
 				<configuration>
 					<forkMode>always</forkMode>
 					<useFile>false</useFile>
+					<useManifestOnlyJar>false</useManifestOnlyJar>
 					<failIfNoTests>false</failIfNoTests>
 					<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
 					<workingDirectory>${project.build.testOutputDirectory}</workingDirectory>
