--- a/sessl-james/pom.xml
+++ b/sessl-james/pom.xml
@@ -11,6 +11,10 @@
 		<version>0.8-SNAPSHOT</version>
 		<relativePath>../.</relativePath>
 	</parent>
+	
+	<properties>
+		<james.version>0.9.1-SNAPSHOT</james.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -26,39 +30,39 @@
 		<dependency>
 			<groupId>org.jamesii</groupId>
 			<artifactId>sasf</artifactId>
-			<version>0.8.8</version>
+			<version>${james.version}</version>
 		</dependency>
-		<!-- To support SR models etc.: -->
+		<!-- To support modeling formalisms: -->
 		<dependency>
 			<groupId>org.jamesii</groupId>
 			<artifactId>sr</artifactId>
-			<version>0.8.8</version>
+			<version>${james.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jamesii</groupId>
 			<artifactId>srs</artifactId>
-			<version>0.8.8</version>
+			<version>${james.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jamesii</groupId>
 			<artifactId>pi-calculus</artifactId>
-			<version>0.8.8</version>
+			<version>${james.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jamesii</groupId>
 			<artifactId>pdevs</artifactId>
-			<version>0.8.8</version>
+			<version>${james.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jamesii</groupId>
 			<artifactId>mlrules</artifactId>
-			<version>0.8.8</version>
+			<version>${james.version}</version>
 		</dependency>
 		<!-- To support report generation: -->
 		<dependency>
 			<groupId>org.jamesii</groupId>
 			<artifactId>resultreports</artifactId>
-			<version>0.8.8</version>
+			<version>${james.version}</version>
 		</dependency>
 	</dependencies>
 </project>
