Added instrumentation support for ML-Rules, some minor refactoring.

--- a/sessl-james/pom.xml
+++ b/sessl-james/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>mlrules</artifactId>
 			<version>${james.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jamesii</groupId>
+			<artifactId>mlrules-unreleased</artifactId>
+			<version>${james.version}</version>
+		</dependency>
 		<!-- To support report generation: -->
 		<dependency>
 			<groupId>org.jamesii</groupId>
