Moved basic support for integration of optimization tools from unreleased repo.

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
 		<module>sessl-james</module>
 		<module>sessl-sbmlsim</module>		
 		<module>sessl-omnetpp</module>
+		<module>sessl-opt4j</module>
 		<module>sessl-integration</module>
 		<module>sessl-release</module>
 	</modules>
