--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
 			<artifactId>sessl-omnetpp</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.sessl</groupId>
+			<artifactId>sessl-opt4j</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<!-- External dependencies: -->
 		
