some clean-up, added compiler flags to point out deprecations etc., some more fixes w.r.t. scala 2.10 (not reflection though)

--- a/sessl/pom.xml
+++ b/sessl/pom.xml
@@ -21,10 +21,10 @@
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
 		</dependency>
-		<dependency>
+<!--    <dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scalap</artifactId>
-		</dependency>
+		</dependency> Can be removed? -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
