--- a/sessl/pom.xml
+++ b/sessl/pom.xml
@@ -7,7 +7,7 @@
  <parent>
     <groupId>org.sessl</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>0.8-SNAPSHOT</version>
+    <version>0.8</version>
     <relativePath>../.</relativePath>
  </parent>
 
